--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         "@type": "Product"
       }
     </script>
-    <title>Light2live by Txalata Studio</title>
+    <title>Light2live by Kekoxdd Studio</title>
     <meta name="csrf_token" value="IktYRG5jTTJRNDZ3VFI0RSBVUiBCVVRUIGxIV1NBVWVZRFJ1NUtPcCI=.i/hR8xmy5NC2icHj1xsaleB3Yxk=" />
     <link rel="stylesheet" href="https://static.itch.io/game.css?1662925820" />
     <script type="text/javascript">
@@ -384,7 +384,7 @@
                   <strong>Download</strong>
                 </p>
                 <ul>
-                  <li><a href="https://cdn.discordapp.com/attachments/1103445859645001902/1111594730149662770/light2live_setup.exe">Click to download</a> beta version</li>
+                  <li><a href="https://discord.com/channels/@me/1170322548307791873/1199724346017579069">Click to download</a> beta version</li>
                 <div class="info_panel_wrapper">
                   <div class="game_info_panel_widget">
                     <table>
