--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="games/967023" name="itch:path" />
     <meta content="@itchio" name="twitter:site" />
-    <meta content="Light2live by Txalata Studio" name="twitter:title" />
+    <meta content="Light2live by Kekoxdd Studio" name="twitter:title" />
     <meta content="Use the light to live, escape from the darkness." name="twitter:description" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="https://img.itch.zone/aW1nLzY0NTU4NTAucG5n/original/cscigz.png" property="twitter:image" />
