--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                   <strong>Download</strong>
                 </p>
                 <ul>
-                  <li><a href="https://discord.com/channels/@me/1170322548307791873/1199724346017579069">Click to download</a> beta version</li>
+                  <li><a href="https://cdn.discordapp.com/attachments/1170322548307791873/1199724345581391882/Light_2_Live.rar?ex=65c3955d&is=65b1205d&hm=0fb65032ae002e55ff5944f549e045bd4ddd01eb575c907b4e4564482ca4e1f2&">Click to download</a> beta version</li>
                 <div class="info_panel_wrapper">
                   <div class="game_info_panel_widget">
                     <table>
